# crucible

./: Cargo.toml  README.md
.github/workflows/: backend-ci.yml  ci.yml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/benches/: performance.rs
backend/migrations/: .keep
backend/scripts/: init-db.sql
backend/src/: app_state.rs  error.rs  lib.rs  main.rs
backend/src/api/: contracts.rs
backend/src/api/handlers/: contracts.rs  dashboard.rs  deploy_health.rs  mod.rs  profiling.rs
backend/src/api/middleware/: logging.rs  permissions.rs
backend/src/config/: mod.rs  observability.rs  reload.rs
backend/src/db/: mod.rs  seeds.rs
backend/src/services/: alerts.rs  audit.rs  business_metrics.rs  cache_invalidation.rs  cache_metrics.rs  compilation.rs  contract_upgrade.rs  contract_versioning.rs  error_recovery.rs  feature_flags.rs  log_aggregator.rs  log_alerts.rs  mod.rs  sandbox.rs  sys_metrics.rs  tracing.rs  transformers.rs
backend/src/test_utils/: mocks.rs
backend/src/utils/: errors.rs  mod.rs  serialization.rs  validators.rs  xdr.rs
backend/src/workers/: priority.rs  retry.rs
backend/tests/: api_tests.rs  audit_tests.rs  contract_upgrade_tests.rs  dashboard_tests.rs  load_tests.rs  permissions_tests.rs  retry_integration_tests.rs  tracing_integration.rs
backend/tests/integration/: api_profile_test.rs  mod.rs
backend/tests/load/: dashboard_load.rs  framework.rs  mod.rs  profile_load.rs  status_load.rs  stellar_load.rs
contracts/crucible/: Cargo.toml
contracts/crucible/src/: cost.rs  env.rs  lib.rs  macros.rs  reputation.rs  token.rs
contracts/crucible/test_snapshots/reputation/test/: test_admin_can_set_increase_and_decrease_reputation.1.json  test_mutations_require_auth_without_mock_all_auths.1.json  test_non_admin_cannot_decrease_reputation.1.json  test_non_admin_cannot_set_reputation.1.json
contracts/treasury/src/: lib.rs
contracts/treasury/tests/: treasury_test.rs
examples/cross-contract/: Cargo.toml
examples/cross-contract/src/: lib.rs  test.rs
examples/emergency_stop/: Cargo.toml
examples/emergency_stop/src/: lib.rs  test.rs
examples/emergency_stop/test_snapshots/test/: test_add_guardian_emits_event.1.json  test_admin_can_resume.1.json  test_guardian_can_stop.1.json  test_initial_state_is_not_stopped.1.json  test_non_admin_cannot_add_guardian.1.json  test_non_admin_cannot_add_guardian.2.json  test_protected_action_reverts_when_stopped.1.json  test_protected_action_succeeds_after_resume.1.json  test_protected_action_succeeds_when_running.1.json  test_resume_emits_event.1.json  test_stop_emits_event.1.json
examples/escrow/test_snapshots/test/: test_arbiter_approve_allows_early_claim.1.json  test_claim_before_timeout_reverts.1.json  test_create_emits_event.1.json  test_create_transfers_tokens_to_contract.1.json  test_double_claim_reverts.1.json  test_refund_after_timeout.1.json
examples/gasless/: Cargo.toml
examples/gasless/src/: test.rs
examples/gasless/test_snapshots/test/: test_execute_emits_event.1.json  test_execute_transfers_tokens.1.json  test_expired_meta_tx_reverts.1.json  test_multiple_users_independent_nonces.1.json  test_nonce_increments_after_execute.1.json  test_nonce_starts_at_zero.1.json  test_replay_attack_reverts.1.json  test_sequential_nonces_succeed.1.json  test_wrong_nonce_reverts.1.json
examples/staking/: Cargo.toml
examples/staking/src/: lib.rs  test.rs
examples/staking/test_snapshots/test/: test_additional_stake_accumulates.1.json  test_delegate_emits_event.1.json  (+13 more)
examples/time_locked_vault/: Cargo.toml
examples/time_locked_vault/src/: lib.rs  test.rs
(+9 files in other folders)
