[package]
name = "backend"
version = "0.1.0"
edition = "2021"
description = "Backend API server for the Crucible smart contract testing platform"
license = "MIT"
authors = ["Crucible Contributors"]
publish = false

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "backup"
path = "src/bin/backup.rs"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "dashboard_bench"
harness = false

[features]
default = []
testutils = ["mockall"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["full", "util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id"] }
tower_governor = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Database (PostgreSQL via SQLx)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros", "migrate", "rust_decimal"] }

# Redis
redis = { version = "1.2", features = ["tokio-comp", "connection-manager", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

# Observability / Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
tracing-opentelemetry = { version = "0.32", default-features = false }
opentelemetry-semantic-conventions = "0.16"
tonic = "0.12"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"
config = "0.14.0"
rust_decimal = { version = "1.35", features = ["serde", "db-postgres"] }
rust_decimal_macros = "1.35"
arc-swap = "1.7"
stellar-xdr = { version = "21.0", features = ["std"] }
soroban-sdk = { workspace = true }
base64 = "0.22"
validator = { version = "0.19", features = ["derive"] }
async-trait = "0.1"
url = { version = "2", features = ["serde"] }

# API documentation
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# Background jobs
apalis = { version = "0.6" }
apalis-redis = "0.6"

# Scheduler
tokio-util = "0.7"
cron = "0.12"

# Optional mock support for tests
mockall = { version = "0.13", optional = true }
sha2 = "0.11.0"
regex = "1.12.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
testcontainers = "0.16"
wiremock = "0.6"
hyper = { version = "1.0", features = ["full"] }
mime = "0.3"
mockall = "0.13"
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
